Use Java 11 compatible API